[package]
name = "ddos_protection_service"
version = "0.1.0"
edition = "2021"
authors = ["enyeoluwarotimisimon@gmail.com"]
description = "A comprehensive DDoS protection and traffic management system for web applications"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "timeout", "cors"] }

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cloudflare API
reqwest = { version = "0.11", features = ["json"] }

# Rate limiting and caching
governor = "0.6"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.20"
metrics-exporter-prometheus = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = "0.2"
